monitoring/grafana-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    kubernetes.io/ingress.className: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: "grafana.sarahaligbe.me"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana 
                port:
                  number: 3000
