monitoring/prom-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prom-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    kubernetes.io/ingress.className: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: "prom.sarahaligbe.me"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus 
                port:
                  number: 9090
